--- a/spring_boot/learning_managment_system/src/main/resources/application.properties
+++ b/spring_boot/learning_managment_system/src/main/resources/application.properties
@@ -3,10 +3,11 @@ spring.application.name=learning_managment_system
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/lms_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=chandan
+spring.datasource.password=Sa123
 
 #JPA properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.formate_sql=true
+server.port=8082
