--- a/spring_boot/demo/bin/src/main/resources/application.properties
+++ b/spring_boot/demo/bin/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=hotel_managment_system
+spring.application.name=demo
 #Connection properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel_managment_system_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Sa123
 
@@ -10,3 +10,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.formate_sql=true
+
+server.port=8082
