--- a/hotel_managment_system/src/main/resources/application.properties
+++ b/hotel_managment_system/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=hotel_managment_system
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel_managment_system_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=chandan
+spring.datasource.password=Sa123
 
 #JPA properties
 spring.jpa.show-sql=true
